# sistarTGBot

./: .dockerignore  .gitignore  Dockerfile  SistarClient.py  TelegramBot.py  config.sample.yml  docker-compose.yml  itau.py  main.py  pyproject.toml  ruff.sh  ruff.toml  run.py
banco_watcher/: bot.py
banco_watcher/clients/: ItauClient.py  SistarbancClient.py
banco_watcher/providers/: ItauProvider.py  SistarbancProvider.py  base.py
itau_service/: Dockerfile  main.mjs  package-lock.json  package.json
tg_bank_forwarder/: bot.py  config.py  provider_cache.py  transaction_cache.py
tg_bank_forwarder/clients/: ItauClient.py  SistarClient.py  itau.py
tg_bank_forwarder/providers/: __init__.py  base.py  itau.py  registry.py  sistarbanc.py
tg_bank_forwarder/sources/: base.py  itau.py  sistarbank.py
