[tool.poetry]
name = "sisbank"
version = "0.1.0"
description = ""
authors = ["Gonzalo Rizzo <me@gonzalorizzo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
python-telegram-bot = {version = "20.0a6", extras = ["job-queue"]}
python-dotenv = "^0.21.0"
lxml = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
