[tool.poetry]
name = "tg_bank_forwarder"
version = "0.2.0"
description = ""
authors = ["Gonzalo Rizzo <me@gonzalorizzo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
python-dotenv = "^0.21.0"
lxml = "^4.9.1"
pydantic = "^1.10.2"
pytelegrambotapi = "^4.15.4"
rich = "^12.6.0"
sentry-sdk = "^1.12.0"
playwright = "^1.41.1"
pyyaml = "^6.0.1"
ruff = "^0.2.1"
dulwich = "^0.21.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
